infrastructure/kubernetes-dashboard/03-ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: kubernetes-dashboard
  namespace: kubernetes-dashboard
  labels:
    app.kubernetes.io/name: kubernetes-dashboard
    app.kubernetes.io/component: networking
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`dashboard.62.171.153.219.nip.io`)
      kind: Rule
      services:
        - name: kubernetes-dashboard
          port: 443
          scheme: https
          serversTransport: kubernetes-dashboard-transport
